# StatefulREPL

./: .gitignore  CONTRIBUTING.md  README.md  agents.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.md  documentation.yml  feature_request.md  feature_request.yml
.github/agents/: archivist.agent.md  builder.agent.md  coordinator.agent.md  distiller.agent.md  planner.agent.md  red-team.agent.md  verifier.agent.md
.github/instructions/: documentation.instructions.md  loom-protocol.instructions.md  python-standards.instructions.md  testing.instructions.md
.github/prompts/: consolidate.prompt.md  handoff.prompt.md  orient.prompt.md  plan.prompt.md  review.prompt.md  stillness-gate.prompt.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  lint.yml  loom-24x7-watchdog.yml  loom-writeback-guard.yml  release.yml  test.yml
.loom/: artifact-registry.md  claim-ledger.md  contract-sheet.md  oracle-matrix.md  paradox-queue.md  trace-wisdom-log.md
docs/: prompt_integration.md
examples/: demo_multi_session.py  demo_workflow.py
scripts/: loom_watchdog.py
src/stateful_repl/: __init__.py  agents.py  calibration.py  cli.py  compression.py  events.py  hallucination.py  loom_state.py  loom_writeback.py  message_bus.py  models.py  orchestrator.py  planner.py  prefetch.py  quality.py  (+3 more)
tests/: test_events.py  test_hallucination.py  test_loom_state.py  test_loom_writeback.py  test_phase3.py  test_phase4.py  test_quality.py  test_sandbox.py  test_server.py
(+4 files in other folders)
