[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stateful-repl"
version = "0.3.0"
description = "The Loom — stateful AI memory and orchestration system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.25",
]
server = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
]
openai = [
    "openai>=1.0",
]
anthropic = [
    "anthropic>=0.20",
]
all = [
    "stateful-repl[server,openai,anthropic]",
]

[project.scripts]
loom-repl = "stateful_repl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
